# pdn-monitoring

./: Dockerfile-test  Makefile  README.md  analysis.ipynb  pyproject.toml  requirements.txt
docs/: 1. Preprocessing.ipynb  2. Clustering.ipynb  3. Modeling.ipynb
docs/data/: ml_dataset_preprocessed.parquet
pdn_monitoring/: __init__.py
pdn_monitoring/models/: gradient_boosting_2021_04_19.joblib  logistic_regression_2021_04_19.joblib  random_forest_2021_04_19.joblib  standard_scaler_2021_04_19.joblib  support_vector_2021_04_19.joblib
pdn_monitoring/test/: test_load_model.py  test_predict.py  test_preprocess_data.py
pdn_monitoring/test/test_data/: test_case_1.csv  test_case_2.csv  test_case_3.csv
